--- a/styles/utils/fonts.module.css
+++ b/styles/utils/fonts.module.css
@@ -21,7 +21,7 @@
   font-weight: bold;
 }
 
-@media screen {
+@media screen and (min-width: 768px) {
   .heading-m {
     font-size: 8rem;
   }
